# fugle-marketdata-sdk

./: .gitattributes  .gitignore  .markdown-link-check.json  CHANGELOG.md  Cargo.toml  MIGRATION.md  Makefile  fugle-marketdata-sdk.sln
.github/workflows/: benchmark.yml  build-nodejs.yml  build-python.yml  build-uniffi.yml  ci.yml  csharp.yml  docs-validation.yml  java.yml  nodejs.yml  publish-java.yml  publish-nodejs.yml  publish-nuget.yml  publish-python.yml  python.yml  release-gui.yml  release.yml  test.yml  uniffi.yml  verify-internal-smoke.yml  version-check.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v0.2.0-INTEGRATION-CHECK.md  v0.2.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md
.planning/phases/01-build-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/01-core-config-validation/: 01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-python-binding/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  NODEJS-PATTERNS.md  PITFALLS.md  PYTHON-PATTERNS.md  STACK.md  SUMMARY.md  v0.3.0-SUMMARY.md
benchmarks/ws/: .gitignore  REPORT.md  package.json  ws-bench-new-py.py  ws-bench-new.js  ws-bench-old-py.py  ws-bench-old.js  ws-bench-run.js  ws-mock-server.js
bindings/cpp/: marketdata_uniffi.cpp  marketdata_uniffi.hpp  marketdata_uniffi_scaffolding.hpp
bindings/csharp/: FugleMarketData.sln  README.md
bindings/go/: README.md
bindings/java/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
core/: Cargo.toml  README.md
core/benches/: rest_latency.rs  websocket_throughput.rs
core/examples/: rest_basic.rs  websocket_basic.rs
core/src/: errors.rs  lib.rs  runtime.rs  tls.rs
core/src/models/: candle.rs  common.rs  corporate.rs  historical.rs  mod.rs  quote.rs  snapshot.rs  streaming.rs  subscription.rs  technical.rs  ticker.rs  trade.rs  volume.rs
core/src/models/futopt/: channel.rs  common.rs  historical.rs  mod.rs  product.rs  quote.rs  ticker.rs
core/src/rest/: auth.rs  client.rs  error.rs  mod.rs
core/src/rest/futopt/: mod.rs
core/src/rest/futopt/historical/: candles.rs  daily.rs  mod.rs
core/src/rest/futopt/intraday/: candles.rs  mod.rs  products.rs  quote.rs  ticker.rs  tickers.rs  trades.rs  volumes.rs
core/src/rest/stock/: mod.rs
core/src/rest/stock/corporate_actions/: capital_changes.rs  dividends.rs  listing_applicants.rs  mod.rs
core/src/rest/stock/historical/: candles.rs  mod.rs  stats.rs
core/src/rest/stock/intraday/: candles.rs  mod.rs  quote.rs  ticker.rs  tickers.rs  trades.rs  volumes.rs
core/src/rest/stock/snapshot/: actives.rs  mod.rs  movers.rs  quotes.rs
core/src/rest/stock/technical/: bb.rs  kdj.rs  macd.rs  mod.rs  rsi.rs  sma.rs
core/src/websocket/: config.rs  connection.rs  health_check.rs  message.rs  mod.rs  reconnection.rs  subscription.rs
core/src/websocket/channels/: futopt.rs  mod.rs  parser.rs  stock.rs
core/tests/: integration_rest.rs  integration_websocket.rs
cs/: Cargo.toml  build.rs
cs/FugleMarketData/: EventArgs.cs  Exceptions.cs  FugleMarketData.csproj  NativeErrorCodes.cs  NativeMethods.g.cs  RestClient.cs  WebSocketClient.cs
cs/FugleMarketData.Tests/: ExceptionTests.cs  FugleMarketData.Tests.csproj  RestClientTests.cs  WebSocketClientTests.cs
cs/FugleMarketData/Models/: PriceLevel.cs  Quote.cs  StreamMessage.cs  Ticker.cs  Trade.cs
cs/src/: errors.rs  lib.rs  rest_client.rs  types.rs  websocket.rs
docs/: INTERNAL_INSTALL.md  configuration.md
gui-web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
gui-web/src/: App.tsx  index.css  persist.ts  tauri.ts
gui-web/src-tauri/: Cargo.toml  tauri.conf.json
gui-web/src-tauri/capabilities/: default.json
gui-web/src-tauri/src/: bridge.rs  commands.rs  error.rs  events.rs  lib.rs  main.rs
js/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  test_event_loop.js  test_legacy_readme.js  test_rest.js  test_stream.js  test_websocket.js  types.d.ts  validate_types.js  ws_stream.js
js/scripts/: postbuild.js
js/src/: client.rs  errors.rs  lib.rs  websocket.rs
js/tests/: api-compatibility.test.js  config.test.ts  ffi-boundary.test.js  performance.test.js  response-compatibility.test.js  rest-integration.test.js  websocket-integration.test.js
js/tests/benchmarks/: baseline.json  package-lock.json  package.json  record-official-baseline.js
js/tests/fixtures/: official-quote.json  official-ticker.json  official_sdk_quote.json  official_sdk_ticker.json  official_sdk_trades.json  record-official-responses.js
migration/: migrate-javascript.js  migrate-python.py  validate-migration.sh
py/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_2330.py  test_async_rest.py  test_legacy_readme.py  test_rest.py  test_websocket.py  test_ws_callback.py  test_ws_stream.py
py/fugle_marketdata/: __init__.py  __init__.pyi
py/marketdata_py/: __init__.py  __init__.pyi
py/src/: callback.rs  client.rs  errors.rs  iterator.rs  lib.rs  tls_kwargs.rs  types.rs  websocket.rs
py/tests/: __init__.py  conftest.py  test_api_compatibility.py  test_config.py  test_ffi_boundary.py  test_gil_safety.py  test_performance.py  test_response_compatibility.py  test_rest_async.py  test_websocket_async.py
py/tests/benchmarks/: baseline.json  record_official_baseline.py
py/tests/fixtures/: .gitkeep  official_sdk_candles.yaml  official_sdk_quote.yaml  official_sdk_ticker.yaml  official_sdk_trades.yaml  official_sdk_volumes.yaml  record_official_responses.py
tests/: RESULTS.md
uniffi/: Cargo.toml  README.md  build.rs  uniffi.toml
uniffi/src/: client.rs  errors.rs  lib.rs  models.rs  tls.rs  websocket.rs
(+223 files in other folders)
