[workspace]
members = ["core", "py", "js", "uniffi"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fugle/fugle-marketdata-sdk"
homepage = "https://developer.fugle.tw"
authors = ["Fugle Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
futures-util = "0.3"
url = "2.5"

# Python binding dependencies
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }

# Node.js binding dependencies
napi = { version = "2.16", features = ["napi8", "async", "serde-json", "tokio_rt"] }
napi-derive = "2.16"
napi-build = "2.1.3"

# C# binding dependencies (UniFFI for now, csbindgen in Phase 4)
uniffi = { version = "0.28", features = ["cli"] }

# Core library as workspace dependency
marketdata-core = { path = "core" }
