[package]
name = "marketdata-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace-inherited dependencies
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures-util.workspace = true
url.workspace = true

# Core-only dependencies
ureq = { version = "2.12", default-features = false, features = ["json", "tls", "gzip"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
# rustls pinned to ring (pure Rust crypto) to avoid aws-lc-rs pulling in C/NASM
# via feature unification. Must match ureq's "tls" feature which also uses ring.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# Matches the version tokio-tungstenite's rustls-tls-native-roots feature pulls in,
# so cargo graph unifies rather than duplicating.
rustls-native-certs = "0.8"
rustls-pemfile = "2.0"
exponential-backoff = "2.0"
indexmap = "2.2"

[features]
# FFI bindings will be added in Phase 6
python = []
js = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "rest_latency"
harness = false

[[bench]]
name = "websocket_throughput"
harness = false
