[package]
name = "marketdata-cs"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
marketdata-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
libc.workspace = true
once_cell.workspace = true

[build-dependencies]
csbindgen.workspace = true
