[package]
name = "marketdata-js"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NAPI-RS bindings for marketdata-core - Node.js FFI"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core library
marketdata-core.workspace = true

# NAPI-RS 2.x for Node.js bindings
napi.workspace = true
napi-derive.workspace = true

# Async runtime (for WebSocket)
tokio = { workspace = true, features = ["rt", "time", "sync"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build.workspace = true
