[package]
name = "marketdata-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for marketdata-core"

[lib]
name = "fugle_marketdata"
crate-type = ["cdylib"]

[dependencies]
marketdata-core.workspace = true
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
