[package]
name = "marketdata-gui-tauri"
version = "0.1.1"
description = "Fugle Marketdata desktop GUI"
authors = ["Fugle Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "marketdata_gui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"

marketdata-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

tracing = "0.1"
log = "0.4"
